--- a/Front/BorisEventos-App/src/app/eventos/eventos.component.html
+++ b/Front/BorisEventos-App/src/app/eventos/eventos.component.html
@@ -1,7 +1,58 @@
 <h1>Eventos</h1>
 
-<div *ngFor="let evento of eventos">
-    <p><b>Tema: </b>{{evento.tema}}</p>
-    <p><b>Tema: </b>{{evento.local}}</p>
-    <hr>
+<div class="form-inline">
+    <div class="form-group mb-2">
+        <label class="mr-2">Filtro:  </label>
+        <input
+         type="text" 
+         class="form-control mr-2" 
+         placeholder="Buscar"
+         [(ngModel)] = "filter"
+         >
+    </div>
 </div>
+<table class="table table-striped">
+    <thead class="thead-dark">
+        <tr>
+            <th><button class="btn btn-outline-light btn-sm" (click)="collapseImage()">
+                {{showImage ? 'exibir' : 'ocultar'}}
+            </button></th>
+            <th>#</th>
+            <th>Tema</th>
+            <th>Local</th>
+            <th>Data</th>
+            <th>Participantes</th>
+            <th>Lote</th>
+            <th>Opções</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let evento of eventosFiltrados">
+            <td>
+                <img [collapse]="showImage" 
+                     [isAnimated]= true
+                src="\assets\{{evento.imageUrl}}"
+                [style.width.px]= "widthImg"
+                [style.margin.px]= "marginImg"
+                >
+            </td>
+            <td>{{evento.eventoId}}</td>
+            <td>{{evento.tema}}</td>
+            <td>{{evento.local}}</td>
+            <td>{{evento.dataEvento}}</td>
+            <td>{{evento.qtdPessoas}}</td>
+            <td>{{evento.lote}}</td>
+            <td>
+                <button class="btn btn-primary btn-sm mr-2">Editar</button>
+                <button class="btn btn-danger btn-sm">Excluir</button>
+            </td>
+        </tr>
+    </tbody>
+    <tfoot *ngIf="!eventos.length">
+        <tr>
+            <td colspan="8" class="text-center">
+                <p><b>Nenhum evento encontrado!</b></p>
+            </td>
+        </tr>
+    </tfoot>
+</table>
